--- a/first-stylish-website/index.html
+++ b/first-stylish-website/index.html
@@ -13,51 +13,35 @@
         <div class="item">
             <h2>Hello I'm</h2>
             <h1>JACK SMITH</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque laboriosam debitis odio numquammagnam doloremque aspernatur nesciunt illo? Repellendus voluptatum eos amet quos quas?</p>
-            <a class=bt target="_blank" href="https://www.linkedin.com/in/rafid-muhymin-wafi-4799851a7/">HIRE ME</a>
-        </div>
-        <div class="item">
-            <img src="images/peter.png" alt="">
-        </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque laboriosam debitis odio numquammagnam doloremque aspernatur nesciunt illo? Repellendus voluptatum eos amet quos quas?</p><a class=bt target="_blank" href="https://www.linkedin.com/in/rafid-muhymin-wafi-4799851a7/">HIRE ME</a>            </div>
+        <div class="item"> <img src="images/peter.png" alt=""> </div>
     </div>
     <div id="bio" class="flex">
         <div class="item"> <img src="images/peter_dream.png" alt=""></div>
         <div class="item">
             <h2>Biography</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus minus tempora suscipit quia corrupti. excepturi, laborum quis neque maxime error. Suscipit veniam odio error nisi quos ea corrupti aliquid, animi maxime quo commodi facere
-                quam quibusdam eligendi saepe ullam?</p>
-            <a class="bt">DOWNLOAD CV</a>
-        </div>
+                quam quibusdam eligendi saepe ullam?</p><a class="bt">DOWNLOAD CV</a> </div>
     </div>
     <div id="works">
         <h2 id="h2">My Latest Work</h2>
-        <div class="album flex">
-            <img src="images/work-1.png" alt="">
-            <img src="images/work-2.jpg" alt="">
-            <img src="images/work-3.jpg" alt="">
-        </div>
+        <div class="album flex"> <img src="images/work-1.png" alt=""> <img src="images/work-2.jpg" alt=""> <img src="images/work-3.jpg" alt=""> </div>
     </div>
     <div id="foot">
         <div id="footchild">
             <div>
                 <h2>What Our Clients Say About Us</h2>
-            </div>
-            <br>
+            </div><br>
             <div>
                 <h4 id="h4">Bruce Moccy</h4>
                 <p>Founder & CEO, Alies</p>
-            </div>
-            <br>
+            </div><br>
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est tempore reprehenderit officia? Fugit officia, repudiandae iusto ducimus soluta nobis vero velit numquam sapiente magni! Sint.</p>
-            </div>
-            <br>
-            <div class="bt">
-                <br>
+            </div><br>
+            <div class="bt"> <br>
                 <p>For query leave a message at</p>
-                <h3>rafid@muhymin.com</h3>
-                <br>
-            </div>
+                <h3>rafid@muhymin.com</h3> <br></div>
         </div>
     </div>
     <footer id="footer"> Copyright &copy;
