reminified index.html

--- a/first-stylish-website/index.html
+++ b/first-stylish-website/index.html
@@ -14,10 +14,10 @@
             <h2>Hello I'm</h2>
             <h1>JACK SMITH</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque laboriosam debitis odio numquammagnam doloremque aspernatur nesciunt illo? Repellendus voluptatum eos amet quos quas?</p><a class=bt target="_blank" href="https://www.linkedin.com/in/rafid-muhymin-wafi-4799851a7/">HIRE ME</a>            </div>
-        <div class="item"> <img src="images/peter.png" alt=""> </div>
+        <div class="item"> <img src="images/peter.png"> </div>
     </div>
     <div id="bio" class="flex">
-        <div class="item"> <img src="images/peter_dream.png" alt=""></div>
+        <div class="item"> <img src="images/peter_dream.png"></div>
         <div class="item">
             <h2>Biography</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus minus tempora suscipit quia corrupti. excepturi, laborum quis neque maxime error. Suscipit veniam odio error nisi quos ea corrupti aliquid, animi maxime quo commodi facere
@@ -25,7 +25,7 @@
     </div>
     <div id="works">
         <h2 id="h2">My Latest Work</h2>
-        <div class="album flex"> <img src="images/work-1.png" alt=""> <img src="images/work-2.jpg" alt=""> <img src="images/work-3.jpg" alt=""> </div>
+        <div class="album flex"> <img src="images/work-1.png"> <img src="images/work-2.jpg"> <img src="images/work-3.jpg"> </div>
     </div>
     <div id="foot">
         <div id="footchild">
