completed a new simple portfolio website

--- a/first-portfolio-website/index.html
+++ b/first-portfolio-website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,22 +27,20 @@
         <h2 id="h2">My Latest Work</h2>
         <div class="album flex"> <img src="images/work-1.png"> <img src="images/work-2.jpg"> <img src="images/work-3.jpg"> </div>
     </div>
-    <div id="foot">
-        <div id="footchild">
-            <div>
-                <h2>What Our Clients Say About Us</h2>
-            </div><br>
-            <div>
-                <h4 id="h4">Bruce Moccy</h4>
-                <p>Founder & CEO, Alies</p>
-            </div><br>
-            <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est tempore reprehenderit officia? Fugit officia, repudiandae iusto ducimus soluta nobis vero velit numquam sapiente magni! Sint.</p>
-            </div><br>
-            <div class="bt"> <br>
-                <p>For query leave a message at</p>
-                <h3>rafid@muhymin.com</h3> <br></div>
-        </div>
+    <div id="footchild">
+        <div>
+            <h2>What Our Clients Say About Us</h2>
+        </div><br>
+        <div>
+            <h4 id="h4">Bruce Moccy</h4>
+            <p>Founder & CEO, Alies</p>
+        </div><br>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est tempore reprehenderit officia? Fugit officia, repudiandae iusto ducimus soluta nobis vero velit numquam sapiente magni! Sint.</p>
+        </div><br>
+        <div class="bt"> <br>
+            <p>For query leave a message at</p>
+            <h3>rafid@muhymin.com</h3> <br></div>
     </div>
     <footer id="footer"> Copyright &copy;
         <script>
