completed the pin matcher assignmennt

--- a/e-school/index.html
+++ b/e-school/index.html
@@ -18,7 +18,7 @@
                 <a href="#">Blog</a>
                 <a href="#">Contact Us</a>
                 <a href="#">About Us</a>
-                <a class="btn" href="#">Login</a>
+                <a id="login" class="btn" href="#">Login</a>
                 <a id="menu">
                     <div class="bar"></div>
                     <div class="bar"></div>
@@ -31,7 +31,7 @@
                 <a href="#">Blog</a>
                 <a href="#">Contact Us</a>
                 <a href="#">About Us</a>
-                <a href="#">
+                <a id="collapse-login" href="#">
                     <div><a href="#" class="btn">Login</a></div>
                 </a>
             </div>
