removed bootstrap from hot-gadgets

--- a/e-school/index.html
+++ b/e-school/index.html
@@ -18,14 +18,14 @@
                 <a href="#">Blog</a>
                 <a href="#">Contact Us</a>
                 <a href="#">About Us</a>
-                <a id="login" class="btn" href="#">Login</a>
+                <a class="btn" href="#">Login</a>
                 <a id="menu">
                     <div class="bar"></div>
                     <div class="bar"></div>
                     <div class="bar"></div>
                 </a>
             </nav>
-            <div class="menu">
+            <nav class="menu">
                 <a href="#">Books</a>
                 <a href="#">Courses</a>
                 <a href="#">Blog</a>
@@ -34,7 +34,7 @@
                 <a id="collapse-login" href="#">
                     <div><a href="#" class="btn">Login</a></div>
                 </a>
-            </div>
+            </nav>
             <div id="flex">
                 <div id="one">
                     <p id="red-text">Are you ready to Learn?</p>
