--- a/hot-gadgets/index.html
+++ b/hot-gadgets/index.html
@@ -9,70 +9,62 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="mr-auto">
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" href="#">Home</a>
-                        <a class="nav-link" href="#">Products</a>
-                        <a class="nav-link" href="#">About Us</a>
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <nav class="menu">
+        <a id="logo" href="#"><img src="images/Logo.png" alt="logo"></a>
+        <a href="#">Home</a>
+        <a href="#">Products</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+        <a id="hamburger">
+            <div class="menubar"></div>
+            <div class="menubar"></div>
+            <div class="menubar"></div>
+        </a>
     </nav>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="car-flex">
-                    <div class="car-text">
-                        <h1>Macbook Pro</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem doloremque tenetur obcaecati officiis deserunt, omnis ipsam explicabo nobis? Itaque sed suscipit dolor. Rerum, ea.</p>
-                        <a class="btn btn-dark" href="#">Buy Now &#8594;</a>
-                    </div>
-                    <img class="car-text" src="images/slider-1.png" class="d-block w-100">
+    <nav id="hidden-menu">
+        <a href="#">Home</a>
+        <a href="#">Products</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+    </nav>
+    <div class="slide-container">
+        <div class="slide fade showing">
+            <div class="car-flex">
+                <div class="car-text">
+                    <h1>Macbook Pro</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem doloremque tenetur obcaecati officiis deserunt, omnis ipsam explicabo nobis? Itaque sed suscipit dolor. Rerum, ea.</p>
+                    <a class="btn btn-dark" href="#">Buy Now &#8594;</a>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="car-flex">
-                    <div class="car-text">
-                        <h1>Google's Smart Speaker</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem doloremque tenetur obcaecati officiis deserunt, omnis ipsam explicabo nobis? Itaque sed suscipit dolor. Rerum, ea.</p>
-                        <a class="btn btn-dark" href="#">Buy Now &#8594;</a>
-                    </div>
-                    <img class="car-text" src="images/slider-2.png" class="d-block w-100">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="car-flex">
-                    <div class="car-text">
-                        <h1>Loudspeaker</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem doloremque tenetur obcaecati officiis deserunt, omnis ipsam explicabo nobis? Itaque sed suscipit dolor. Rerum, ea.</p>
-                        <a class="btn btn-dark" href="#">Buy Now &#8594;</a>
-                    </div>
-                    <img class="car-text" src="images/slider-3.png" class="d-block w-100">
-                </div>
+                <img class="car-text" src="images/slider-1.png" class="d-block w-100">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </a>
+        <div class="slide fade">
+            <div class="car-flex">
+                <div class="car-text">
+                    <h1>Google's Smart Speaker</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem doloremque tenetur obcaecati officiis deserunt, omnis ipsam explicabo nobis? Itaque sed suscipit dolor. Rerum, ea.</p>
+                    <a class="btn btn-dark" href="#">Buy Now &#8594;</a>
+                </div>
+                <img class="car-text" src="images/slider-2.png" class="d-block w-100">
+            </div>
+        </div>
+        <div class="slide fade">
+            <div class="car-flex">
+                <div class="car-text">
+                    <h1>Loudspeaker</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem doloremque tenetur obcaecati officiis deserunt, omnis ipsam explicabo nobis? Itaque sed suscipit dolor. Rerum, ea.</p>
+                    <a class="btn btn-dark" href="#">Buy Now &#8594;</a>
+                </div>
+                <img class="car-text" src="images/slider-3.png" class="d-block w-100">
+            </div>
+        </div>
+        <a onclick="prevSlide()" class="prev">&#10094;</a>
+        <a onclick="nextSlide()" class="next">&#10095;</a>
+        <div class="bars">
+            <span onclick="changeSlide(0)" class="bar"></span>
+            <span onclick="changeSlide(1)" class="bar"></span>
+            <span onclick="changeSlide(2)" class="bar"></span>
+        </div>
     </div>
     <div class="flex">
         <h2>Smartphones</h2>
@@ -174,7 +166,7 @@
             <br>
         </a>
         <div id="f2">
-            <a href="#" class="a">
+            <a href="#">
                 <div class="cat">
                     <br>
                     <img src="images/perfume.png">
@@ -184,7 +176,7 @@
                     <br>
                 </div>
             </a>
-            <a href="#" class="a">
+            <a href="#">
                 <div class="cat mtop">
                     <br>
                     <img src="images/shoe.png">
